authorization is added

--- a/alembic.ini
+++ b/alembic.ini
@@ -64,9 +64,9 @@ version_path_separator = os
 # output_encoding = utf-8
 
 # sqlalchemy.url = sqlite:///pomodoro_db.sqlite
-sqlalchemy.url = postgresql+psycopg2://docker_postgres:docker_postgres@localhost:5431/pomodoro
+sqlalchemy.url = postgresql+psycopg2://docker_postgres:docker_postgres@localhost:5431/docker_postgres
 
-                               '''   вот это тут было   driver://user:pass@localhost/dbname'''
+                              #  '''   вот это тут было   driver://user:pass@localhost/dbname'''
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
 # on newly generated revision scripts.  See the documentation for further
