--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "alembic (>=1.15.2,<2.0.0)",
     "psycopg2 (>=2.9.10,<3.0.0)",
     "redis (>=6.0.0,<7.0.0)",
-    "python-jose[cryptography] (>=3.4.0,<4.0.0)"
+    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
+    "response (>=0.5.0,<0.6.0)",
+    "requests (>=2.32.3,<3.0.0)"
 ]
 
 [tool.poetry]
