--- a/alembic.ini
+++ b/alembic.ini
@@ -64,7 +64,7 @@ version_path_separator = os
 # output_encoding = utf-8
 
 # sqlalchemy.url = sqlite:///pomodoro_db.sqlite
-sqlalchemy.url = postgresql+psycopg2://docker_postgres:docker_postgres@localhost:5431/docker_postgres
+sqlalchemy.url = postgresql+asyncpg://docker_postgres:docker_postgres@localhost:5431/docker_postgres
 
                               #  '''   вот это тут было   driver://user:pass@localhost/dbname'''
 [post_write_hooks]
