--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,15 @@ dependencies = [
     "redis (>=6.0.0,<7.0.0)",
     "python-jose[cryptography] (>=3.4.0,<4.0.0)",
     "response (>=0.5.0,<0.6.0)",
-    "requests (>=2.32.3,<3.0.0)"
+    "requests (>=2.32.3,<3.0.0)",
+    "pytest (>=8.3.5,<9.0.0)",
+    "pytest-twisted (>=1.14.3,<2.0.0)",
+    "twisted (>=24.11.0,<25.0.0)",
+    "pytest-factoryboy (>=2.7.0,<3.0.0)",
+    "faker (>=37.3.0,<38.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "uvicorn (>=0.34.2,<0.35.0)",
+    "gunicorn (>=23.0.0,<24.0.0)"
 ]
 
 [tool.poetry]
